--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -18,20 +18,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/date"
+        android:id="@+id/selectDateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="Select Date"
         android:onClick="onDateClicked"
-        app:layout_constraintBaseline_toBaselineOf="@+id/orderButton"
-        app:layout_constraintEnd_toStartOf="@+id/orderButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/sendOrderButton"
+        app:layout_constraintEnd_toStartOf="@+id/sendOrderButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/orderButton"
+        android:id="@+id/sendOrderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -40,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/date"
-        app:layout_constraintTop_toBottomOf="@+id/availability" />
+        app:layout_constraintTop_toBottomOf="@+id/availabilityStatus" />
 
     <TextView
         android:id="@+id/confirm"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <TextView
-        android:id="@+id/availability"
+        android:id="@+id/availabilityStatus"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -68,6 +68,13 @@
         app:layout_constraintTop_toBottomOf="@+id/confirm" />
 
     <TextView
+        android:id="@+id/bookName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Book Name"
+        android:textSize="20sp" />
+
+    <TextView
         android:id="@+id/orderSummary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -78,7 +85,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/selectDateButton" />
+
+    <EditText
+        android:id="@+id/borrower"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Borrower Name"
+        android:inputType="text" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
